--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="https://bootswatch.com/4/litera/bootstrap.css" />
     <title>Social Network</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
